added the option to specify an imagepullpolicy for the job image
